# auto-home

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
components/led/: Animation.h  LedController.cpp  LedController.h  LinearLedStrip.cpp  LinearLedStrip.h  PositionedLed.cpp  PositionedLed.h  StaticUniformColor.cpp  StaticUniformColor.h
main/: Vector.cpp  Vector.h  main.cpp
